# bsc_bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml
app/: config.py
app/core/transaction/: dto.py  exception.py  interactor.py  model.py
app/core/user/: dto.py  interactor.py
app/core/wallet/: interactor.py
app/infra/bscscan/: base.py  config.py  main.py
app/infra/db/: main.py
app/infra/db/alembic/: env.py
app/infra/db/alembic/versions/: 6cf34952990b_.py  835828b96535_.py  d6bdb7342523_.py
app/infra/db/models/: user.py
app/present/bot/: __main__.py
app/present/bot/filters/: wallet.py
app/present/bot/handlers/: settings.py  setup.py  start.py  transactions.py  utils.py  wallet.py
app/present/bot/keyboards/inline/: button.py  callback.py
app/present/bot/locales/: __init__.py  uk.py
app/present/bot/middlewares/: interactor.py  setup.py
app/present/bot/services/: commands.py  states.py
tests/functional/: conftest.py  test_start.py
tests/mock/: bscscan.py  db.py
tests/unit/: conftest.py
tests/unit/core/: test_transaction.py  test_user.py  test_wallet.py
